# learning-deep-learning

./: .gitignore  Makefile  pyproject.toml
notebooks/: activation_functions.ipynb  autograd.ipynb  cnn_lenet_5.ipynb  convolutions.ipynb  gradient_descent.ipynb  k_fold_cross_validation.ipynb  mlp_mnist_classification.ipynb  pytorch_autograd.ipynb  pytorch_mlp_fn_approxiamtion.ipynb  pytorch_module.ipynb  transfer_learning.ipynb
src/: model_trainer.py
